[tool.poetry]
name = "api-twitter"
version = "1.0.0"
description = "testando api"
authors = ["LeonardoSantos16 <leodsmf@gmail.com>"]
readme = "README.md"
packages = [{include = "api_twitter"}]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.1"
pymongo = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
